--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ejs": "^3.1.2",
     "express": "^4.17.1",
     "http": "0.0.1-security",
+    "https": "^1.0.0",
     "mongodb": "^3.5.6",
     "mongoose": "^5.9.10",
     "nodemon": "^2.0.3",
