--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "https": "^1.0.0",
     "jquery": "^3.5.1",
     "jsdom": "^16.2.2",
+    "lodash": "^4.17.19",
     "mongodb": "^3.5.6",
     "mongoose": "^5.9.10",
     "nodemon": "^2.0.4",
