--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "connect-mongodb-session": "^2.3.1",
     "cookie-session": "^1.4.0",
     "cors": "^2.8.5",
+    "dot-prop": "^5.2.0",
     "ejs": "^3.1.2",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
